# nasa_r2_simulator

./: README.md
iss_taskboard_gazebo/: .gitignore  CMakeLists.txt  package.xml
iss_taskboard_gazebo/env-hooks/: 10.iss_taskboard_gazebo.bash.develspace.in  10.iss_taskboard_gazebo.bash.installspace.in
iss_taskboard_gazebo/launch/: taskboard.launch
iss_taskboard_gazebo/models/iss_taskboard/: model.config
iss_taskboard_gazebo/models/iss_taskboard/meshes/: cable_link.dae  cable_link1.dae  cable_link2.dae  cable_link3.dae  cable_link4.dae  cable_link5.dae  tskbd_lower_assembly_labels.dae  tskbd_lower_assembly_robonaut.dae  tskbd_panel_assembly_eva_slot3.dae  tskbd_panel_assembly_eva_slot3_labels.dae  tskbd_panel_assembly_eva_slot3_panel.dae  tskbd_panel_assembly_slot1_a1.dae  tskbd_panel_assembly_slot1_a2.dae  tskbd_panel_assembly_slot1_a3.dae  tskbd_panel_assembly_slot1_b1.dae  tskbd_panel_assembly_slot1_b2.dae  tskbd_panel_assembly_slot1_b3.dae  tskbd_panel_assembly_slot1_blackplate.dae  tskbd_panel_assembly_slot1_c1.dae  tskbd_panel_assembly_slot1_c2.dae  tskbd_panel_assembly_slot1_c3.dae  tskbd_panel_assembly_slot1_guard.dae  tskbd_panel_assembly_slot1_labels.dae  tskbd_panel_assembly_slot1_panel.dae  tskbd_panel_assembly_slot1_switch.dae  tskbd_panel_assembly_slot1_switch1.dae  tskbd_panel_assembly_slot1_switch2.dae  tskbd_panel_assembly_slot1_switch3.dae  tskbd_panel_assembly_slot1_switch4.dae  tskbd_panel_assembly_slot2.dae  tskbd_panel_assembly_slot2_b01.dae  tskbd_panel_assembly_slot2_b01_base.dae  tskbd_panel_assembly_slot2_b02.dae  tskbd_panel_assembly_slot2_b02_base.dae  tskbd_panel_assembly_slot2_b03.dae  tskbd_panel_assembly_slot2_b03_base.dae  tskbd_panel_assembly_slot2_b03_strip.dae  tskbd_panel_assembly_slot2_b04.dae  tskbd_panel_assembly_slot2_b04_base.dae  (+11 more)
iss_taskboard_gazebo/plugins/include/: ISSTaskboardPanelA.h
iss_taskboard_gazebo/plugins/src/: ISSTaskboardPanelA.cpp
iss_taskboard_gazebo/plugins/test/: helper.py  test_numpad.py  test_numpad.test  test_power_cover.py  test_power_cover.test  test_power_switch.test  test_rocker_switch_a01.test  test_toggle_a04.test
iss_taskboard_gazebo/xacro/: iss_taskboard.urdf.xacro  taskboard.urdf.xacro  taskboard_B01.urdf.xacro  taskboard_B05.urdf.xacro
iss_taskboard_gazebo/xacro/taskboard/: taskboard.B01.xacro  taskboard.B05.xacro  taskboard.lower.xacro  taskboard.plugin.xacro
nasa_r2_simulator/: package.xml
nasa_robodyn_ros/: CMakeLists.txt  package.xml
nasa_robodyn_ros/include/nasa_robodyn_ros/: R2RosArbiter.hpp  R2RosGripper.hpp  R2RosTrajectoryManager.hpp  R2RosTreeId.hpp
nasa_robodyn_ros/launch/: default_controller_config.yaml  r2_legs_control.launch  r2_legs_control.launch~  r2_upperbody_control.launch  r2_upperbody_control.launch~  robodyn.launch
nasa_robodyn_ros/src/: R2RosArbiter.cpp  R2RosGripper.cpp  R2RosTrajectoryManager.cpp  R2RosTreeFk.cpp  R2RosTreeId.cpp  robodyn_node.cpp
r2_gazebo/: CMakeLists.txt  package.xml
r2_gazebo/config/: r2_gazebo.rviz
r2_gazebo/config/controllers/: r2_fullbody_generic_traj_control.yaml  r2_generic_traj_control.yaml  r2sim_full_params.yaml  r2sim_legs_params.yaml  r2sim_torso_params.yaml
r2_gazebo/launch/: iss_half_world.launch  iss_quarter_world.launch  iss_world.launch  r2_fullbody_gazebo_no_gui.launch  r2_gazebo.launch  r2_gazebo_no_gui.launch  r2b_upperbody.launch  r2b_upperbody_rviz.launch  r2b_upperbody_table.launch  r2c_full.launch  r2c_full_iss.launch  r2c_full_iss_quarter.launch  r2c_full_ros_control.launch  r2c_full_rviz.launch  r2c_legs.launch  r2c_legs_rviz.launch  r2c_torso_taskboard.launch  r2c_upperbody.launch  r2c_upperbody_ros_control.launch  r2c_upperbody_rviz.launch  r2c_upperbody_table.launch  table_world.launch
r2_gazebo/models/CTB/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/M_01_Bag/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/handle/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/handrail/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/handrail_21_5/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/handrail_30/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/handrail_41_5/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/handrail_8_5/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/iss/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/iss_half/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/iss_quarter/: model-1_4.sdf  model.config  model.sdf
r2_gazebo/models/nasa_table/: model.config  nasa_table.sdf
r2_gazebo/models/switch/: model.config  switch.sdf
r2_gazebo/models/thermometer/: model.config  thermometer.sdf
r2_gazebo/models/weight20/: model.config  weight20.sdf
r2_gazebo/robots/: r2.sim.urdf  r2_fullbody.sim.urdf
r2_gazebo/urdf/: r2.urdf
r2_gazebo/worlds/: empty.world  iss.world  iss_2.world  iss_half.world  iss_quarter.world  table.world
r2_gazebo/xacro/: r2b_upperbody.urdf.xacro  r2c_full.urdf.xacro  r2c_full_ros_control.urdf.xacro  r2c_legs.urdf.xacro  r2c_upperbody.urdf.xacro  r2c_upperbody_ros_control.urdf.xacro
r2_gazebo/xacro/gazebo_plugins/: gazebo_interface.xacro  leg_grippers.xacro  p3d_base_controller.xacro  r2.gazebo.controller.xacro  r2.transmissions.xacro  r2_legs.transmissions.xacro
r2_gazebo/xacro/r2/: r2.gazebo.xacro  r2c_full_body.controller.xacro  r2c_legs.gazebo.xacro
r2_gazebo/xacro/sensors/: asus.gazebo.xacro  grasshopper2.gazebo.xacro  hokuyo_lx30_laser.gazebo.xacro  nano.gazebo.xacro  pgr_flea.gazebo.xacro  prosilica.gazebo.xacro  r2b_head.gazebo.sensors.xacro  r2c.gazebo.sensors.xacro  r2c_legs.gazebo.sensors.xacro  swissranger.gazebo.xacro
r2_gazebo_gripper/: CMakeLists.txt  package.xml
r2_gazebo_gripper/include/r2_gazebo_gripper/: GazeboGripper.h
r2_gazebo_gripper/src/: GazeboGripper.cpp
r2_gazebo_interface/: CMakeLists.txt  package.xml
r2_gazebo_interface/include/r2_gazebo_interface/: GazeboInterface.h  JointController.h  RobotController.h
r2_gazebo_interface/src/: GazeboInterface.cpp  JointController.cpp  RobotController.cpp
(+26 files in other folders)
