<?xml version="1.0"?>
<package>
  <name>iss_taskboard_gazebo</name>
  <version>0.0.0</version>
  <description>The iss_taskboard_gazebo package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>xacro</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export> 
</package>
