<?xml version="1.0"?>
<package>
  <name>nasa_r2_simulator</name>
  <version>0.6.0</version>
  <description>The nasa_r2_simulator package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>
  
  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>iss_taskboard_gazebo</run_depend>
  <run_depend>nasa_robodyn_ros</run_depend>
  <run_depend>r2_gazebo</run_depend>
  <run_depend>r2_gazebo_gripper</run_depend>
  <run_depend>r2_gazebo_interface</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
