<?xml version="1.0"?>
<package>
  <name>nasa_robodyn_ros</name>
  <version>1.0.0</version>
  <description>The ros implementation of robodyn</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nasa_robodyn_controllers_core</build_depend>
  <build_depend>nasa_r2_common_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nasa_robodyn_controllers_core</run_depend>
  <run_depend>nasa_r2_common_msgs</run_depend>
  <run_depend>r2_description</run_depend>
  <!--<run_depend>nasa_supervisors_control</run_depend> -->

  <export>
  </export>
</package>
