<?xml version="1.0"?>
<package>
  <name>r2_gazebo</name>
  <version>0.6.0</version>
  <description>The r2_gazebo package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>r2_gazebo_interface</run_depend>
  <run_depend>r2_gazebo_gripper</run_depend>
  <run_depend>nasa_robodyn_ros</run_depend>
  <run_depend>r2_description</run_depend>
  <run_depend>gazebo_ros_control</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export> 
</package>
