<?xml version="1.0"?>
<package>
  <name>r2_gazebo_interface</name>
  <version>0.6.0</version>
  <description>The gazebo_interface package</description>

  <maintainer email="allison.thackston@nasa.gov">Allison Thackston</maintainer>

  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nasa_r2_common_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nasa_r2_common_msgs</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export> 
</package>
